Update contact email in privacy policy

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -88,6 +88,6 @@
 
     <h2>Contact Us</h2>
     <p>If you have questions about this privacy policy, please contact us at:</p>
-    <p>Email: privacy@morphometric.app</p>
+    <p>Email: morphometric26@gmail.com</p>
 </body>
 </html>
